Javac2007/src/test/attr/error/repeated_annotation_target.java
package test.attr.error;
import java.lang.annotation.*;

//@Target()
@Target({ElementType.TYPE,ElementType.TYPE})
public @interface repeated_annotation_target {}
